2020-08-01 First release of catering screenshots
2020-08-01 - 2020-08-09 screenshots and readme adjusted to progress program development.
2020-08-09 First release of installation for windows and LINUX, sourcecode and temporarely database.
           The program is still in developemnt.
           Todoo - database add fields for saling prices and sale quantities (glasses contents and so on).
           Inserting new database items for catering and deleting not applying items
           Program adjustments for input articles.
           Several changes for printlists, imports.
           Writing documentation.
           Remember is a first preview version, the program is in development and not fully tested!
2020-08-09 xdotools in LINUX did not work for ESC changed in Escape problem solved
2020-08-09 selection QPlaintext by groupbuttons adjusted wrong method used, solved!
2020-08-09 printing receipt changed to plain printing, QPrintDialog method removed.
2020-08-10 method added for selecting client by barcodescan, besides current selectionmethod, not yet activated, for
           have yet to finish a printmodule for printing clientbarcodes in good resolution for scanning
2020-08-10 disabling button after TRANSFER PAYED Removed, for changing clients after paying.
2020-08-10 catering.backup database changed for adding column barcode into table clients
           